--- a/backend/public/forget_password.html
+++ b/backend/public/forget_password.html
@@ -20,7 +20,9 @@
     <!-- OTP Verification and New Password Form -->
     <form id="resetPasswordForm" style="display: none;">
         <input type="text" id="otp" placeholder="Enter OTP" required>
+        <div id="timer"></div>
         <input type="password" id="newPassword" placeholder="Enter new password" required>
+        <input type="password" id="reEnterPassword" placeholder="Re-enter new password" required>
         <button type="button" onclick="resetPassword()">Reset Password</button>
     </form>
 
