--- a/backend/public/student_home_page.html
+++ b/backend/public/student_home_page.html
@@ -17,7 +17,7 @@
       <div id="header" class="header">Loading...</div>
 
       <a href="events.html" class="btn">Upcoming Events</a>
-      <a href="bv_clubs.html" class="btn">BV Clubs</a>
+      <a href="clubs.html" class="btn">BV Clubs</a>
     </div>
     <script src="student_home_page.js"></script>
     <!-- Link to external JavaScript file -->
